# chess-agent-cai

./: .gitignore  README.md  agent.py  analyse.py  build_profile.py  config.py  get_from_chesscom.py  get_games.py  helper_checks.py  pyproject.toml  setup-dependencies.sh
review_template/: index.html
